# readme-mentor

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_PRIORITIZATION_FIXES.md  debug_qa.py  debug_qa_simple.py  demo.py  demo_developer_error_system.py  demo_error_system.py  demo_metrics_display.py  demo_metrics_system.py  demo_output_formats.py  demo_verbosity_levels.py  pr_description.md  pyproject.toml  readme-mentor  ruff.toml  test_ingest_coverage.py  test_readme_prioritization.py  test_verbosity.py
.github/workflows/: ci.yml
app/: __init__.py  backend.py  cli.py  config.py  models.py  output.py  version.py
app/embeddings/: __init__.py  __main__.py  ingest.py
app/errors/: __init__.py  exceptions.py  handlers.py  manager.py  suggestions.py
app/github/: __init__.py  loader.py
app/llm/: provider.py
app/logging/: __init__.py  channels.py  config.py  enums.py  formatters.py  handlers.py
app/metrics/: __init__.py  collector.py  display.py  models.py  provider.py
app/output/: __init__.py  formatters.py  manager.py
app/preprocess/: __init__.py  markdown_cleaner.py
app/prompts/: __init__.py  system.txt  user.txt
app/rag/: chain.py  citations.py
app/utils/: __init__.py  validators.py
data/kkomiyama_kkomiyama.github.io/raw/docs/: 20210914.md
data/torvalds_test-tlb/raw/: README
docs/: metrics_system.md
docs/source/: architecture.rst  conf.py  index.rst  performance_testing.rst
scripts/: ingest_cli.py  investigate_repositories.py  tag-release.sh  test_github_loader_manual.py
tests/: __init__.py  conftest.py  smoke_test.py  test_chain_assembly.py  test_comprehensive_repositories_test.py  test_config_test.py  test_edge_cases_test.py  test_generate_answer.py  test_github_loader_test.py  test_ingest_coverage_test.py  test_ingest_test.py  test_ingest_unit_test.py  test_markdown_cleaner_test.py  validators_test.py
tests/integration/: __init__.py  test_app_edge_cases.py  test_chunking.py  test_citations_integration.py  test_coverage.py  test_embeddings.py  test_embeddings_integration.py  test_end_to_end.py  test_error_handling.py  test_github_integration.py  test_github_loader_edge_cases.py  test_ingest_basic.py  test_ingest_repository.py  test_ingest_utils.py  test_metadata_validation.py  test_performance.py  test_performance_config.py  test_validators_edge_cases.py  test_vector_search.py
tests/smoke/: __init__.py  test_project_structure.py
tests/unit/: __init__.py  test_citations.py  test_cli.py  test_config.py  test_init.py  test_init_edge_cases.py  test_prompts.py  test_version.py
tests/unit/embeddings/: test_chunking.py  test_cli.py  test_embeddings.py  test_ingest.py  test_ingest_edge_cases.py  test_ingest_repository.py  test_ingest_utils.py  test_main.py
tests/unit/github/: __init__.py  test_edge_cases.py  test_file_fetching.py  test_loader.py  test_loader_edge_cases.py  test_url_parsing.py
tests/unit/llm/: test_provider.py
tests/unit/preprocess/: __init__.py  test_cleaned_document.py  test_content_removal.py  test_encoding.py  test_integration.py  test_line_offset_mapper.py  test_markdown_cleaner.py  test_markdown_cleaner_edge_cases.py  test_markdown_conversion.py
tests/unit/utils/: test_validators_edge_cases.py
